Closed
Bug 1178601
Opened 10 years ago
Closed 10 years ago
crash in mozilla::gl::GLBlitHelper::BlitImageToTexture(mozilla::layers::Image*, mozilla::gfx::IntSizeTyped<T> const&, unsigned int, unsigned int, mozilla::gl::OriginPos)
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
People
(Reporter: jujjyl, Assigned: jgilbert)
Details
(Keywords: crash, topcrash-android-armv7, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
|
914 bytes,
patch
|
jrmuizel
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
ritu
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-bc306db8-3239-4cb2-8dcf-2d32e2150629.
=============================================================
STR: 1. Visit https://www.khronos.org/registry/webgl/sdk/tests/conformance/textures/tex-image-and-sub-image-2d-with-video-rgba5551.html?webglVersion=1
Observed: Firefox Nightly crashes.
The crash was seen to occur on
MACBOOK_PRO_OSX
---------------
MacBook Pro (Retina, 15-inch, Early 2013)
OS X Yosemite v10.10.2
2.7GHz Intel Core i7-3740QM
16 GB 1600MHz DDR3
2880x1800 pixels display resolution
Integrated Graphics: Intel HD Graphics 4000 1024MB
- Vendor: Intel (0x8086)
- Device ID: 0x0166
- Revision ID: 0x0009
- gMux Version: 3.2.19 [3.2.8]
Discrete Graphics: NVIDIA GeForce GT 650M
- Vendor: NVIDIA (0x10de)
- Device ID: 0x0fd5
- Revision ID: 0x00a2
- ROM Revision: 3688
- gMux Version: 3.2.19 [3.2.8]
Firefox Nightly 41.0a1 (2015-06-29)
| Reporter | ||
Comment 1•10 years ago
|
||
The crash did not occur on any of
SPARK
-----
Sony Xperia Z3 Compact (Z3C) Model 5803 (The Ignite initiative/foxfooding program Spark phone) (September 2014)
720x1280 pixels display
Chipset: Qualcomm MSM8974AC Snapdragon 801
CPU: Quad-core 2.5 GHz Qualcomm Krait 400 (ARMv7-A compatible)
2GB of RAM
GPU: Qualcomm Adreno 330
Firefox OS 3.0.0.0-prerelease
- build eng.worker.20150619.224059
- platform version 41.0a1
- build identifier 20150619225606
- git commit 4c06ed88
GIADA
-----
Giada MiniPC
Ubuntu 14.04.2 LTS 64-bit
Intel(R) Core(TM) i5-3317U CPU @ 1.70GHz
4GB of RAM
1920x1080 pixels display
Intel(R) HD Graphics 4000
- VGA compatible controller: Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09)
- OpenGL vendor string: Intel Open Source Technology Center
- /usr/lib/xorg/modules/drivers/intel_drv.so, compiled for 1.15.1, module version = 2.99.910
Firefox Nightly 41.0a1 (2015-06-29)
MACBOOK_AIR_OSX
---------------
MacBook Air (13-inch, Mid 2011)
OS X Lion 10.7.5
1.7GHz Intel Core i5
4GB 1333 MHz DDR3
1440x900 pixels display
Intel HD Graphics 3000 384MB
- Vendor: Intel (0x8086)
- Device ID: 0x0116
- Revision ID: 0x0009
Firefox Nightly 41.0a1 (2015-06-29)
MACBOOK_AIR_WIN
---------------
The same hardware as MACBOOK_AIR_OSX, but running Windows 7 Home Premium 64-bit in dual-boot mode.
System DirectX version: DirectX 11.0
Intel HD Graphics 3000:
- igdumd64.dll, igd10umd64.dll:
- version 9.17.10.3517
- date 3/20/2014
- DDI Version 10.1, WDDM 1.1, WHQL approved
Firefox Nightly 41.0a1 (2015-06-29)
MACBOOK_PRO_WIN
---------------
The same hardware as MACBOOK_PRO_OSX, but running Windows 8.1 Pro 64-bit in dual-boot mode.
System DirectX version: DirectX 11.0
NVIDIA GeForce GT 650M
- nvd3dumx.dll, nvwgf2umx.dll:
- version 10.18.13.5330
- 6/17/2015
- D3D Version 11.0, WDDM 1.3, not WHQL certified
Firefox Nightly 41.0a1 (2015-06-29)
MACMINI
-------
Mac Mini (Late 2012)
OS X 10.9.4
2.3GHz Intel Core i7
4 GB 1600 MHz DDR3
1280x720 pixels display resolution
Intel HD Graphics 4000, 1024 MB
- Vendor: Intel (0x8086)
- Device ID: 0x0166
- Revision ID: 0x0009
Firefox Nightly 41.0a1 (2015-06-29)
MACPRO
------
Mac Pro (Late 2013)
OS X Yosemite 10.10.3
3.5GHz 6-Core Intel Xeon E5
32GB 1866MHz DDR3 ECC
1920x1080 pixels display
AMD FirePro D500 3072MB
- Vendor: ATI (0x1002)
- Device ID: 0x679e
- Revision ID: 0x0000
- ROM Revision: 113-C3861J-687
- gMux Version: 4.0.11 [3.2.8]
- EFI Driver Version: 01.00.687
Firefox Nightly 41.0a1 (2015-06-29)
NEXUS-4
-------
LG Nexus 4 (October 2012)
768x1280 pixels display
Chipset: Qualcomm APQ8064 Snapdragon S4 Pro
CPU: Quad-core 1.5 GHz Qualcomm Krait (ARMv7-A compatible)
2GB of RAM
GPU: Qualcomm Adreno 320
- OpenGL ES 3.0, driver version v95.0
Android 5.0.1
Firefox Nightly 41.0a1 (2015-06-29)
NEXUS-5
-------
LG Nexus 5 (November 2013)
1080x1920 pixels display
Chipset: Qualcomm MSM8974 Snapdragon 800
CPU: Quad-core 2.3 GHz Qualcomm Krait 400 (ARMv7-A compatible)
2GB of RAM
GPU: Qualcomm Adreno 330
- OpenGL ES 3.0, driver version v104.0
Android 5.1.1
Firefox Nightly 41.0a1 (2015-06-29)
NEXUS-10
--------
Samsung Nexus 10 (October 2012)
2560x1600 pixels display
Chipset: Samsung Exynos 5250
CPU: Dual-core 1.7 GHz ARM Cortex-A15
2GB of RAM
GPU: ARM Mali-T604
- OpenGL ES 3.0
Android 4.4.4
Firefox Nightly 41.0a1
- build id 20150629030210
SURFACE
-------
Microsoft Surface Pro 2
Windows 8.1 64-bit
Intel Core i5-4200U @ 1.60GHz
8 GB of RAM
1920x1080 pixels display
Intel HD Graphics 4400
- igdumdim64.dll, igd10iumd64.dll:
- version 10.18.14.4170
- date 3/31/2015
- D3D version 11.1, WDDM 1.3, WHQL approved
Firefox Nightly 41.0a1 (2015-06-29)
WINDBOX
-------
Custom built desktop PC
Windows 8.1 Pro
Intel Core 2 Quad Q9400 @ 2.66GHz
4GB of RAM
2560x1440 pixels
System DirectX version: DirectX 11.0
NVIDIA GeForce 9600 GT
- nvd3dumx.dll, nvwgf2umx.dll:
- version 9.18.13.4052
- date 8/19/2014
- D3D level 10.0, WDDM 1.2, WHQL approved
Firefox Nightly 41.0a1 (2015-06-29)
HASWELL
-------
Custom built desktop PC
Windows 8.1 64-bit
3.0 GHz Intel 8-Core i7-5960X
16GB of RAM
3840x2160 pixels display
System DirectX version: DirectX 11.0
NVIDIA GeForce GTX 980, 12GB of RAM, driver version 347.52
- nvd3dumx.dll, nvwgf2umx.dll:
- version 9.18.13.4752
- date 2/6/3015
- D3D Version 11.1, WDDM 1.3, WHQL approved
Firefox Nightly 41.0a1 (2015-06-29)
HPOMEN
------
HP OMEN Pro 15 Notebook
Windows 10 Pro Insider Preview Build 10130
Intel Core i7-4720HQ @ 2.60GHz
8GB of RAM
1920x1080 pixels display
System DirectX version: DirectX 12.0
Integrated Graphics: Intel HD Graphics 4600, 4GB
- igdumdim64.dll, igd10iumd64.dll:
- version 10.18.15.4235
- date 6/25/1025
- D3D11.1, WDDM 2.0, WHQL approved
Discrete Graphics: NVIDIA Quadro K1100M, 6GB
- nvd3dumx.dll, nvwgf2umx.dll:
- version 9.18.13.5284
- date 5/21/2015
- D3D11.0, WDDM 2.0, WHQL approved
Firefox Nightly 41.0a1 (2015-06-29)
| Reporter | ||
Comment 2•10 years ago
|
||
Comment 3•10 years ago
|
||
This might be a dupe of bug 1175931.
https://www.khronos.org/registry/webgl/conformance-suites/1.0.3/conformance/extensions/oes-texture-half-float-with-video.html?webglVersion=1
Windows 10 build 10240 x64 (10.0.10240.16412)
Gigabyte GeForce GTX 650 Ti (GV-N65TOC-1GI)
nVIDIA ForceWare 353.62
Firefox 40 beta 9 x64 (20150730171029) = crashing
https://crash-stats.mozilla.com/report/index/bb3d7062-cacd-43a0-9997-0b4f82150808
https://crash-stats.mozilla.com/report/index/7f7f5b2a-ec88-465b-9bfd-79a4c2150808
Firefox 42 nightly x64 (20150808030207) = working
Windows 7 x64 (6.1.7601.18869)
MSI N530GT (MS-V230)
nVIDIA ForceWare 353.62
Firefox 40 release build 5 x32 (20150807085045) = crashing
https://crash-stats.mozilla.com/report/index/66aa6d0e-2ebd-4053-9cb2-b09ad2150809
Firefox 41 aurora x32 (20150808004005) = crashing
https://crash-stats.mozilla.com/report/index/54600970-877d-43c9-8053-877902150809
Firefox 42 nightly x32 (20150808030207) = working
Comment 6•10 years ago
|
||
I crash often in this stack using Firefox nightly on https://developer.mozilla.org/en-US/demos/detail/apple-hls-javascript-player/launch - see https://crash-stats.mozilla.com/report/index/40393220-7341-4d6a-bb09-086a22150811
Comment 7•10 years ago
|
||
[Tracking Requested - why for this release]: This signature is in the top 5 for release Firefox for Android.
status-firefox41:
--- → affected
status-firefox42:
--- → affected
status-firefox43:
--- → affected
status-firefox44:
--- → affected
tracking-firefox41:
--- → ?
tracking-firefox42:
--- → ?
tracking-firefox43:
--- → ?
tracking-firefox44:
--- → ?
Keywords: topcrash-android-armv7
OS: Mac OS X → All
Tracked for 41 as this is a top crash on both Desktop and Android.
Bas, I am not sure who is the best person to help investigate this issue but I thought you could help.
This is a top crasher after 41 was pushed to release channel, would you be able to help find a dev owner who can investigate and nominate a potential patch?
Flags: needinfo?(bas)
| Reporter | ||
Comment 10•10 years ago
|
||
Update to STR: Looks like the directory structure on the khronos site has changes, and the crashing unit test now lives in the location
https://www.khronos.org/registry/webgl/sdk/tests/conformance/textures/video/tex-image-and-sub-image-2d-with-video-rgba-rgba-unsigned_short_5_5_5_1.html
Comment 11•10 years ago
|
||
Since this is seen on 42b1, I'm going to assume that it's not a duplicate of bug 1175931, which was fixed on nightly 42.
Comment 12•10 years ago
|
||
Here's a newer crash report from 41 release, for reference: bp-26311ef6-5f28-4c76-99af-8b29e2150923
| Reporter | ||
Comment 13•10 years ago
|
||
Bisected the failure to this commit in mozilla-inbound: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=0e2c0966c3df&tochange=737853697fe3
(Wider bisect range from mozilla-central was https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=50b95032152c&tochange=41cda3ce8c98)
Flags: needinfo?(jgilbert)
Comment 14•10 years ago
|
||
Interestingly, this signature exploded on version v40 on the same day that it exploded on v41. Perhaps it corresponded with a Facebook site update: two-thirds of submitted URLs contain facebook.
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jgilbert
Status: NEW → ASSIGNED
Flags: needinfo?(jgilbert)
| Assignee | ||
Comment 15•10 years ago
|
||
Flags: needinfo?(bas)
Attachment #8665649 -
Flags: review?(jmuizelaar)
| Assignee | ||
Comment 16•10 years ago
|
||
This is a MOZ_CRASH I added, which is easily seen with blame:
https://hg.mozilla.org/mozilla-central/annotate/8cba870a352c/gfx/gl/GLBlitHelper.cpp#l905
For the future, any time you see a MOZ_CRASH, immediatly needinfo the person that added the crash.
Updated•10 years ago
|
Attachment #8665649 -
Flags: review?(jmuizelaar) → review+
Comment 17•10 years ago
|
||
Jeff, current automatic updates to FF41 are blocked. I would like to take a fix for this bug into a dot release for 41 say 41.0.1. Could you please nominate the fix for uplift to mozilla-release branch? I am assuming the fix is safe and ready for uplift.
Flags: needinfo?(jgilbert)
Comment 18•10 years ago
|
||
Jeff, I am re-directing my question in comment 17 to you. We really need a fix for this issue asap, assuming the patch is safe and ready. I would like to gtb the dot release in the next 2 hrs and having a proposed patch to fix this issue is needed before I do that. Any help is appreciated!
Flags: needinfo?(jmuizelaar)
Updated•10 years ago
|
Attachment #8665649 -
Flags: approval-mozilla-release?
Comment 19•10 years ago
|
||
This should be safe. (It's just removing a MOZ_CRASH for an error case that apparently the callers will handle)
Flags: needinfo?(jmuizelaar)
Comment 20•10 years ago
|
||
Comment on attachment 8665649 [details] [diff] [review]
0001-Don-t-crash-on-incomplete-FB.patch
Approved for uplift to Moz-release as this is a crash that has spiked since 41 went live and most of these are coming from Facebook. This makes it severe enough to include a fix in the 41 dot release.
Attachment #8665649 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 22•10 years ago
|
||
Jeff, AFAIK, we need this fix everywhere i.e. Beta42, Aurora43 and Nightly44. Is that right? Could you please nominate uplifts? Thanks!
Flags: needinfo?(jgilbert) → needinfo?(jmuizelaar)
| Assignee | ||
Comment 23•10 years ago
|
||
Comment on attachment 8665649 [details] [diff] [review]
0001-Don-t-crash-on-incomplete-FB.patch
Approval Request Comment
[Feature/regressing bug #]: -
[User impact if declined]: top-crashes on Facebook
[Describe test coverage new/current, TreeHerder]: on moz-release
[Risks and why]: none
[String/UUID change made/needed]: none
Flags: needinfo?(jmuizelaar)
Attachment #8665649 -
Flags: approval-mozilla-beta?
Attachment #8665649 -
Flags: approval-mozilla-aurora?
Updated•10 years ago
|
Attachment #8665649 -
Flags: approval-mozilla-beta?
Attachment #8665649 -
Flags: approval-mozilla-beta+
Attachment #8665649 -
Flags: approval-mozilla-aurora?
Attachment #8665649 -
Flags: approval-mozilla-aurora+
Comment 24•10 years ago
|
||
Jeff, any reason why this didn't land in m-c yet?
Flags: needinfo?(jgilbert)
Comment 25•10 years ago
|
||
Added in the release notes: "Fix a graphic crash, occurring occasionally on Facebook (1178601)"
relnote-firefox:
--- → 41+
Comment 26•10 years ago
|
||
Hi all, I'm completely new to Bugzilla and have been directed here by Mike Taylor who I contacted thus:
"Firefox v. 41.0.1 under Windows 10 Home. Graphics card AMD Radeon HD 7700 with latest driver (15.201.1151)
Viewing tab with Facebook showing; major part of the window goes black with all toolbars the colour of the title-bar and with the Title-bar showing the tab-title. I resize the Firefox window as that has previously brought back the correct display but instead this showed a modal box reading as follows:
Microsoft Visual C++ Runtime Library
Runtime Error!
Program: c:\Program Files (x86)\Mozilla Firefox\firefox.exe
R6025
- pure virtual function call
Clicking Ok in that box then displayed a further modal box reading:
Firefox has stopped working
Restarting I am able to recover the tabs but the problem quickly reoccurs."
I've subsequently moved to 42.0b2 but the problem remains.
I'm more than happy to do anything I can to assist you guys in fixing this.
Comment 27•10 years ago
|
||
(In reply to dave from comment #26)
> Hi all, I'm completely new to Bugzilla and have been directed here by Mike
> Taylor who I contacted thus:
>
> "Firefox v. 41.0.1 under Windows 10 Home. Graphics card AMD Radeon HD 7700
> with latest driver (15.201.1151)
Please be more honest in stating that these drivers are in fact the latest Catalyst *beta* drivers, not stable drivers. Have you tried with the stable 15.8 drivers? Same issue?
Comment 28•10 years ago
|
||
(In reply to Arthur K. from comment #27)
> (In reply to dave from comment #26)
> > Hi all, I'm completely new to Bugzilla and have been directed here by Mike
> > Taylor who I contacted thus:
> >
> > "Firefox v. 41.0.1 under Windows 10 Home. Graphics card AMD Radeon HD 7700
> > with latest driver (15.201.1151)
>
> Please be more honest in stating that these drivers are in fact the latest
> Catalyst *beta* drivers, not stable drivers. Have you tried with the stable
> 15.8 drivers? Same issue?
Sorry, the 15.7.1 drivers.
Comment 29•10 years ago
|
||
(In reply to Arthur K. from comment #27)
> (In reply to dave from comment #26)
> > Hi all, I'm completely new to Bugzilla and have been directed here by Mike
> > Taylor who I contacted thus:
> >
> > "Firefox v. 41.0.1 under Windows 10 Home. Graphics card AMD Radeon HD 7700
> > with latest driver (15.201.1151)
>
> Please be more honest in stating that these drivers are in fact the latest
> Catalyst *beta* drivers, not stable drivers. Have you tried with the stable
> 15.8 drivers? Same issue?
I apologise for my careless brevity. The problem existed with the existing stable drivers on my PC and so I moved to the latest beta drivers in an attempt to solve it. It didn't. I will now uninstall the beta drivers and revert to the stable 15.7.1 to confirm for you. I also didn't mention that I'm running 64 bit Win 10.
Comment 30•10 years ago
|
||
(In reply to dave from comment #29)
> (In reply to Arthur K. from comment #27)
> > (In reply to dave from comment #26)
> > > Hi all, I'm completely new to Bugzilla and have been directed here by Mike
> > > Taylor who I contacted thus:
> > >
> > > "Firefox v. 41.0.1 under Windows 10 Home. Graphics card AMD Radeon HD 7700
> > > with latest driver (15.201.1151)
> >
> > Please be more honest in stating that these drivers are in fact the latest
> > Catalyst *beta* drivers, not stable drivers. Have you tried with the stable
> > 15.8 drivers? Same issue?
>
> I apologise for my careless brevity. The problem existed with the existing
> stable drivers on my PC and so I moved to the latest beta drivers in an
> attempt to solve it. It didn't. I will now uninstall the beta drivers and
> revert to the stable 15.7.1 to confirm for you. I also didn't mention that
> I'm running 64 bit Win 10.
You may simply need the Visual C++ Runtimes to be installed. Do you have any installed already? I would at the very least install the VC 2013 (http://www.microsoft.com/en-us/download/details.aspx?id=40784) & VC 2015 (https://www.microsoft.com/en-us/download/details.aspx?id=48145) runtimes for x86 and x64, reboot and see if it still happens.
Comment 31•10 years ago
|
||
Reverted to graphics drivers 15.7.1 and problem remained.
Many Visual C++ Runtimes appear in this PCs Apps & features list: 2005 (5 of them with differing sizes & dates) + 2008 (6 of them with differing sizes & dates) + 2010 (1 each of x86 & x64)+ 2012 (3 of them with differing sizes & dates) + 2013 (2 of them with differing sizes & dates).
I've now installed the VC Runtimes you've suggested (repaired the 2013 x86) and whilst it took longer to appear I've just had the issue reoccur.
| Assignee | ||
Comment 32•10 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #24)
> Jeff, any reason why this didn't land in m-c yet?
Nope, I thought it had.
Flags: needinfo?(jgilbert)
Comment 33•10 years ago
|
||
Comment 34•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment 35•10 years ago
|
||
Comment 36•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•