Bug 1178601 - Don't crash on incomplete FB. - r=jrmuizel, a=sylvestre